--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "private": true,
     "version": "0.0.0",
     "description": "A mini stackoverflow-like app",
+    "repository": "https://github.com/sChupin/amaflow",
+    "license": "MIT",
     "devDependencies": {
         "bower": "^1.7.7",
-        "http-server": "^0.9.0",
+        "http-server": "^0.11.1",
         "jasmine-core": "^2.4.1",
         "karma": "^0.13.22",
         "karma-chrome-launcher": "^0.2.3",
